fix: promotion treatment